--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.11.2",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1",
+    "node-sass": "^4.5.1",
+    "sass-loader": "^6.0.3",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -18,7 +25,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0"
   },
   "eslintConfig": {
     "root": true,
